# test-release-log-builder-action

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: complex-config.json  release-note-config.json  release-note-generator.yml
scripts/: setup-dev-tools.sh
